syntax = "proto3";

package user;
option go_package = "user/v1;user";

import "google/api/annotations.proto";

// 定义服务
service User {
  // 简单的 RPC
  rpc IsLogin (IsLoginRequest) returns (IsLoginReply) {
    option (google.api.http) = {
      get: "/api/v1/user/{username}"
    };
  }
  
  // 支持 POST 的 RPC
  rpc Add (AddRequest) returns (AddReply) {
    option (google.api.http) = {
      post: "/api/v1/user"
      body: "*"
    };
  }
  
}

// 请求消息
message IsLoginRequest {
  string username = 1;
}

message AddRequest {
  string username = 1;
  string password = 2;
}

message SearchRequest {
  string query = 1;
  int32 page = 2;
  int32 limit = 3;
}

// 响应消息
message IsLoginReply {
  string message = 1;
  string timestamp = 2;
}

message AddReply {
    string msg = 1;
    int32 code = 2;
}